--- a/GameOfThronesAPI/App.xaml
+++ b/GameOfThronesAPI/App.xaml
@@ -2,7 +2,7 @@
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:common="using:Template10.Common"
-                     RequestedTheme="Dark">
+                     xmlns:controls="using:Template10.Controls">
     
 
     <Application.Resources>
@@ -11,7 +11,21 @@
                 <ResourceDictionary Source="Styles\Custom.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <!--  custom resources  -->
+            <Style TargetType="controls:CustomTitleBar">
+                <Setter Property="BackgroundColor" Value="#232323" />
+                <Setter Property="ButtonBackgroundColor" Value="#232323" />
+                <Setter Property="ButtonForegroundColor" Value="White" />
+                <Setter Property="ButtonHoverBackgroundColor" Value="Orange" />
+                <Setter Property="ButtonHoverForegroundColor" Value="White" />
+                <Setter Property="ButtonInactiveBackgroundColor" Value="DimGray" />
+                <Setter Property="ButtonInactiveForegroundColor" Value="White" />
+                <Setter Property="ButtonPressedBackgroundColor" Value="DarkOrange" />
+                <Setter Property="ButtonPressedForegroundColor" Value="White" />
+                <!--Setter Property="Extended" Value="False" /-->
+                <Setter Property="ForegroundColor" Value="White" />
+                <Setter Property="InactiveBackgroundColor" Value="DimGray" />
+                <Setter Property="InactiveForegroundColor" Value="#232323" />
+            </Style>
 
         </ResourceDictionary>
     </Application.Resources>
