--- a/GameOfThronesAPI/Views/BooksPage.xaml
+++ b/GameOfThronesAPI/Views/BooksPage.xaml
@@ -22,8 +22,8 @@
             <CollectionViewSource x:Key="BooksViewSource" Source="{Binding Books}"/>
         </Grid.Resources>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#232323" Padding="10,10,0,10" >
-            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="32" Glyph="&#xE82D;"/>
-            <TextBlock Text="Books" FontSize="32" Margin="10,0,30,0"/>
+            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="28" Glyph="&#xE8F1;"/>
+            <TextBlock Text="Books" FontSize="20" Margin="10,0,30,0"/>
         </StackPanel>
         <ListView x:Name="booksListView" Grid.Row="1"
                   ItemsSource="{Binding Source={StaticResource BooksViewSource}}" 
