--- a/GameOfThronesAPI/Views/CharacterDetailsPage.xaml
+++ b/GameOfThronesAPI/Views/CharacterDetailsPage.xaml
@@ -12,27 +12,14 @@
         <vm:CharacterDetailsVM x:Name="CharacterDetailViewModel"/>
     </Page.DataContext>
 
-    <Page.Resources>
-        <Style TargetType="TextBlock" x:Key="SecondaryText">
-            <Setter Property="Foreground" Value="Gray"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Margin" Value="4,2,10,2"/>
-
-        </Style>
-        <Style TargetType="TextBlock" x:Key="PrimaryText">
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
-        </Style>
-    </Page.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#232323" Padding="10,10,0,10" >
-            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="32" Glyph="&#xE77B;"/>
-            <TextBlock Text="{Binding Character.Name}" FontSize="32" TextWrapping="WrapWholeWords" Margin="10,0,0,0"/>
+            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="28" Glyph="&#xE77B;"/>
+            <TextBlock Text="{Binding Character.Name}" FontSize="20" TextWrapping="WrapWholeWords" Margin="10,0,0,0"/>
         </StackPanel>
         <ScrollViewer Grid.Row="1">
             <Grid Margin="15,10,10,0">
@@ -81,22 +68,22 @@
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Titles:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Character.TitleText}" Style="{ThemeResource PrimaryText}"/>
 
-                <TextBlock Grid.Row="5" Grid.Column="0" Text="Alliases:" Style="{ThemeResource SecondaryText}"/>
+                <TextBlock Grid.Row="5" Grid.Column="0" Text="Aliases:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Character.AliasText}"  Style="{ThemeResource PrimaryText}"/>
 
                 <TextBlock Grid.Row="6" Grid.Column="0" Text="Father:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="6" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                    <Hyperlink x:Name="FatherLink" Click="FatherLink_Click"><Run Text="{Binding Father.Name}"/></Hyperlink>
+                    <Hyperlink x:Name="FatherLink" Click="FatherLink_Click" Foreground="White"><Run Text="{Binding Father.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="7" Grid.Column="0" Text="Mother:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="7" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                    <Hyperlink x:Name="MotherLink" Click="MotherLink_Click"><Run Text="{Binding Mother.Name}"/></Hyperlink>
+                    <Hyperlink x:Name="MotherLink" Click="MotherLink_Click" Foreground="White"><Run Text="{Binding Mother.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="8" Grid.Column="0" Text="Spouse:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="8" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                    <Hyperlink x:Name="SpouseLink" Click="SpouseLink_Click"><Run Text="{Binding Spouse.Name}"/></Hyperlink>
+                    <Hyperlink x:Name="SpouseLink" Click="SpouseLink_Click" Foreground="White"><Run Text="{Binding Spouse.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="9" Grid.Column="0" Text="Allegiances:" Style="{ThemeResource SecondaryText}"/>
