--- a/GameOfThronesAPI/Views/HouseDetailsPage.xaml
+++ b/GameOfThronesAPI/Views/HouseDetailsPage.xaml
@@ -12,27 +12,14 @@
         <vm:HouseDetailsVM x:Name="HouseDetailViewModel"/>
     </Page.DataContext>
 
-    <Page.Resources>
-        <Style TargetType="TextBlock" x:Key="SecondaryText">
-            <Setter Property="Foreground" Value="Gray"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Margin" Value="4,2,10,2"/>
-            
-        </Style>
-        <Style TargetType="TextBlock" x:Key="PrimaryText">
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
-        </Style>
-    </Page.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#232323" Padding="10,10,0,10" >
-            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="32" Glyph="&#xE80F;"/>
-            <TextBlock Text="{Binding House.Name}" FontSize="32" TextWrapping="WrapWholeWords" Margin="10,0,0,0"/>
+            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="28" Glyph="&#xE7C1;"/>
+            <TextBlock Text="{Binding House.Name}" FontSize="20" TextWrapping="WrapWholeWords" Margin="10,0,0,0"/>
         </StackPanel>
         <ScrollViewer Grid.Row="1">
             <Grid Margin="15,10,10,0">
@@ -81,17 +68,17 @@
 
                 <TextBlock Grid.Row="5" Grid.Column="0" Text="Current Lord:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="5" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                <Hyperlink x:Name="CurrentLordLink" Click="CurrentLordLink_Click"><Run Text="{Binding CurrentLord.Name}"/></Hyperlink>
+                <Hyperlink x:Name="CurrentLordLink" Click="CurrentLordLink_Click" Foreground="White"><Run Text="{Binding CurrentLord.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="6" Grid.Column="0" Text="Heir:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="6" Grid.Column="1"  Style="{ThemeResource PrimaryText}">
-                <Hyperlink x:Name="HeirLink" Click="HeirLink_Click"><Run Text="{Binding Heir.Name}"/></Hyperlink>
+                <Hyperlink x:Name="HeirLink" Click="HeirLink_Click" Foreground="White"><Run Text="{Binding Heir.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="7" Grid.Column="0" Text="Overlord:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="7" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                <Hyperlink x:Name="OverlordLink" Click="OverlordLink_Click"><Run Text="{Binding Overlord.Name}"/></Hyperlink>
+                <Hyperlink x:Name="OverlordLink" Click="OverlordLink_Click" Foreground="White"><Run Text="{Binding Overlord.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="8" Grid.Column="0" Text="Founded:" Style="{ThemeResource SecondaryText}"/>
@@ -99,7 +86,7 @@
 
                 <TextBlock Grid.Row="9" Grid.Column="0" Text="Founder:" Style="{ThemeResource SecondaryText}"/>
                 <TextBlock Grid.Row="9" Grid.Column="1" Style="{ThemeResource PrimaryText}">
-                <Hyperlink x:Name="FounderLink" Click="FounderLink_Click"><Run Text="{Binding Founder.Name}"/></Hyperlink>
+                <Hyperlink x:Name="FounderLink" Click="FounderLink_Click" Foreground="White"><Run Text="{Binding Founder.Name}"/></Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Row="10" Grid.Column="0" Text="Died Out:" Style="{ThemeResource SecondaryText}"/>
