Add filter and exception handling to book and characters part too

--- a/GameOfThronesAPI/Views/BooksPage.xaml
+++ b/GameOfThronesAPI/Views/BooksPage.xaml
@@ -24,6 +24,39 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#232323" Padding="10,10,0,10" >
             <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="28" Glyph="&#xE8F1;"/>
             <TextBlock Text="Books" FontSize="20" Margin="10,0,30,0"/>
+
+            <Button x:Name="Filter" Tapped="Filter_Tapped">
+                <FlyoutBase.AttachedFlyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem>
+                            <MenuFlyoutItem.Template >
+                                <ControlTemplate TargetType="MenuFlyoutItem">
+                                    <Grid Margin="5,0,5,0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Row="0" Grid.Column="0" Text="From:" VerticalAlignment="Center" Margin="0,0,5,5"/>
+                                        <ComboBox x:Name="FromDateCombo" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding FromDateList}" Width="110" Margin="0,0,0,5"/>
+
+                                        <TextBlock Grid.Row="1" Grid.Column="0" Text="To:" VerticalAlignment="Center" Margin="0,0,5,5"/>
+                                        <ComboBox x:Name="ToDateCombo" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding ToDateList}" Width="110" Margin="0,0,0,5"/>
+
+                                        <Button Grid.Row="2" Grid.ColumnSpan="2" Click="Filter_Click" HorizontalAlignment="Stretch" Content="Filter it"/>
+                                    </Grid>
+                                </ControlTemplate>
+                            </MenuFlyoutItem.Template>
+                        </MenuFlyoutItem>
+                    </MenuFlyout>
+                </FlyoutBase.AttachedFlyout>
+                <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="16" Glyph="&#xE011;"/>
+            </Button>
         </StackPanel>
         <ListView x:Name="booksListView" Grid.Row="1"
                   ItemsSource="{Binding Source={StaticResource BooksViewSource}}" 
