--- a/GameOfThronesAPI/Views/HousesPage.xaml
+++ b/GameOfThronesAPI/Views/HousesPage.xaml
@@ -41,10 +41,10 @@
             <Button x:Name="Filter" Tapped="Filter_Tapped" Margin="15,0,0,0">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem x:Name="AMenuFlyoutTry">
+                        <MenuFlyoutItem>
                             <MenuFlyoutItem.Template >
-                                <ControlTemplate TargetType="MenuFlyoutItem" x:Name="ATry2">
-                                    <Grid Margin="5,0,5,0" x:Name="ATry3">
+                                <ControlTemplate TargetType="MenuFlyoutItem">
+                                    <Grid Margin="5,0,5,0">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto"/>
                                             <RowDefinition Height="Auto"/>
